--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Simple Calculator</title>
-  <link rel="stylesheet" type="text/css" href="./CSS/style.css">
+  <link rel="stylesheet" type="text/css" href="/CSS/styles.css">
 </head>
 <body>
   <script >
